# CPP

./: CMakeLists.txt
td1/ex1/: CMakeLists.txt  main.cpp  main.h  my_class.cpp  my_class.h
td1/ex2/: CMakeLists.txt  complex2d.cpp  complex2d.h  main.cpp
td2/: CMakeLists.txt  ex2.h  main.cpp  search.cpp  search.h
td3/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
tp1/: CMakeLists.txt  Card.h  EnergyCard.cpp  EnergyCard.h  Player.cpp  Player.h  PokemonCard.cpp  PokemonCard.h  TrainerCard.cpp  TrainerCard.h  main.cpp
tp2/: CMakeLists.txt  gau.cpp  gau.h  knn.cpp  knn.h  main.cpp  sin.cpp  sin.h  stp.cpp  stp.h  tsdata.cpp  tsdata.h  tsgen.cpp  tsgen.h
